--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -15,7 +15,7 @@ $amatic-sc: 'Amatic SC', cursive;
 $shadows-into-light: 'Shadows Into Light', cursive;
 $architects-daughter: 'Architects Daughter', cursive;
 $covered-by-your-grace: 'Covered By Your Grace', cursive;
-$shadows-into-light-two: 'Shadows Into Light Two';
+$shadows-into-light-two: 'Shadows Into Light Two', cursive;
 $miniver: 'Miniver', cursive;
 
 $mobile: "(max-width:768px)";
